--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "shared server para la aplicacion jobify...",
   "main": "app.js",
   "engines": {
-	"node": "5.12.0"
+    "node": "5.12.0"
   },
   "scripts": {
     "test": "test"
@@ -28,11 +28,13 @@
     "angular-aria": "^1.5.8",
     "angular-material": "^1.1.1",
     "body-parser": "^1.15.2",
+    "bootstrap": "^3.3.7",
     "connect": "^3.4.1",
     "cookie-parser": "^1.4.3",
-    "ejs": "^2.5.1",
+    "ejs": "^2.5.2",
     "express": "^4.14.0",
+    "massive": "^2.5.0",
     "multer": "^1.2.0",
-    "pg": "^6.1.0"
+    "pg": "4.x"
   }
 }
