--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "5.12.0"
   },
   "scripts": {
-    "test": "test"
+    "test": "./node_modules/.bin/mocha --reporter spec"
   },
   "repository": {
     "type": "git",
@@ -29,12 +29,16 @@
     "angular-material": "^1.1.1",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
+    "chai": "^3.5.0",
     "connect": "^3.4.1",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
     "massive": "^2.5.0",
+    "mocha": "^3.0.2",
     "multer": "^1.2.0",
-    "pg": "4.x"
+    "pg": "4.x",
+    "request": "^2.74.0",
+    "vows": "^0.8.1"
   }
 }
