--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": "5.12.0"
   },
   "scripts": {
-    "test": "./node_modules/.bin/mocha --reporter spec"
+    "test": "./node_modules/.bin/mocha --reporter spec",
+		"start": "node app.js"
   },
   "repository": {
     "type": "git",
