--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "./node_modules/.bin/mocha --reporter spec",
-		"start": "node app.js"
+    "start": "node app.js",
+    "db": "node ./scripts/startDB.js"
   },
   "repository": {
     "type": "git",
