--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "pg": "4.x",
     "request": "^2.74.0",
     "serve-favicon": "^2.3.0",
-    "vows": "^0.8.1"
+    "vows": "^0.8.1",
+    "pool": "^0"
   }
 }
